[project]
name = "pvl-api-nodes"
description = "A custom ComfyUI node that integrates with the OpenAI Assistants API."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["openai>=1.3", "requests>=2.31.0", "Pillow>=10.0.0", "torch>=1.13.0", "numpy>=1.21.0", "fal-client>=0.7.0", "google-genai>=1.41.0"]

[project.urls]
Repository = "https://github.com/pvlprk/comfyui-pvl-api-nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/pvlprk/comfyui-pvl-api-nodes/wiki"
"Bug Tracker" = "https://github.com/pvlprk/comfyui-pvl-api-nodes/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-pvl-api-nodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

